# tui-example

./: Cargo.toml
.github/workflows/: release.yml
src/: main.rs
